k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: https
    port: 443
    targetPort: 80
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        resources: 
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 200m
        image: registry.digitalocean.com/angular-dotnet-demo/api:latest
        ports:
        - containerPort: 80
