k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: https
    port: 443
    targetPort: 80
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        resources: 
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 200m
        image: registry.digitalocean.com/angular-dotnet-demo/web:latest
        ports:
        - containerPort: 80
