k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - angular-dotnet-demo.ndrwksr.com
    secretName: angular-dotnet-demo-tls
  rules:
  - host: angular-dotnet-demo.ndrwksr.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port:
              number: 443
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api
            port:
              number: 443
